refactor: use correct method